--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+@import '../node_modules/primeicons/primeicons.css';
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  overflow: hidden;
+  font-family: 'Poppins', sans-serif;
+  margin: auto;
+  height: 100%;
+}
