--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,17 +1,18 @@
 @if (!sidebarBtnClicked) {
-  <button (click)="onSideBarBtnClick()" class="sidebar-hidden">
-    <i class="pi pi-chevron-right"></i>
-  </button>
+<button (click)="onSideBarBtnClick()" class="sidebar-hidden">
+  <i class="pi pi-chevron-right"></i>
+</button>
 } @else {
-  <aside class="sidebar">
-    <header>
-      <h3>
-        <button (click)="onSideBarBtnClick()" class="sidebar-close-btn">
-          <i class="pi pi-chevron-left"></i>
-        </button>
-        Your boards
-      </h3>
-    </header>
+<aside class="sidebar">
+  <header>
+    <button (click)="onSideBarBtnClick()" class="sidebar-close-btn">
+      <i class="pi pi-angle-double-left"></i>
+    </button>
+    <h3>
+      Your boards
+    </h3>
+  </header>
+  <div class="sidebar-content">
     <ul>
       <li class="sidebar-item">
         <button class="sidebar-item-btn">Awesome Project 1</button>
@@ -22,6 +23,31 @@
       <li class="sidebar-item">
         <button class="sidebar-item-btn">Awesome Project 3</button>
       </li>
+      <li class="sidebar-item">
+        <button class="sidebar-item-btn">Awesome Project 4</button>
+      </li>
+      <li class="sidebar-item">
+        <button class="sidebar-item-btn">Awesome Project 5</button>
+      </li>
+      <li class="sidebar-item">
+        <button class="sidebar-item-btn">Awesome Project 6</button>
+      </li>
+      <li class="sidebar-item">
+        <button class="sidebar-item-btn">Awesome Project 7</button>
+      </li>
+      <li class="sidebar-item">
+        <button class="sidebar-item-btn">Awesome Project 8</button>
+      </li>
+      <li class="sidebar-item">
+        <button class="sidebar-item-btn">Awesome Project 9</button>
+      </li>
+      <li class="sidebar-item">
+        <button class="sidebar-item-btn">Awesome Project 10</button>
+      </li>
     </ul>
-  </aside>
+  </div>
+  <div class="sidebar-bottom">
+    © 2025 Claudiu Meiu, All rights reserved.
+  </div>
+</aside>
 }
