--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -2,10 +2,8 @@
   background: none;
   border: none;
   margin-top: 1px;
-  padding-top: 3rem;
-  margin-bottom: 1rem;
-  min-height: 90%;
-  max-height: 90%;
+  padding-top: 2rem;
+  height: 100vh;
   width: 30px;
   display: flex;
   flex-direction: column;
@@ -18,25 +16,20 @@
   }
 }
 .sidebar {
+  position: sticky;
   margin-top: 1px;
-  margin-bottom: 1rem;
   width: 20%;
+  height: 100vh;
   box-shadow: 0px 0px 0px 1px #ccc;
-  min-height: 90%;
-  max-height: 90%;
-  overflow-y: auto;
   header {
-    position: sticky;
-    background: white;
-    top: 0;
-    z-index: 1000;
-    box-shadow: 0px 0px 0px 1px #ccc;
-    padding: 0.5rem;
+    position: relative;
+    box-shadow: 0px 0px -1px 1px #ccc;
+    padding: 1rem;
     .sidebar-close-btn {
-      margin-left: 0.5rem;
-      margin-right: 2rem;
+      font-size: 18px;
+      float: right;
       border-radius: 5px;
-      padding: 0.5rem;
+      padding: 0px 5px;
       border: none;
       background: none;
       &:hover {
@@ -44,30 +37,44 @@
         cursor: pointer;
         background-color: #ff000015;
         box-shadow: 0px 0px 0px 1px #ff000038;
+        color: #ff0000b5;
+      }
+      .pi-angle-double-left {
+        padding-top: 5px;
       }
     }
+  }
+  .sidebar-content {
+    overflow-y: auto;
+    height: 70%;
+    box-shadow: 0px 0px 0px 1px #ccc;
   }
   ul {
     padding-left: 0;
     list-style-type: none;
-  }
-  .sidebar-item {
-    padding: 1rem;
-    .sidebar-item-btn {
-      background-color: whitesmoke;
-      padding: 20px 40px;
-      text-align: left;
-      border: none;
-      width: 100%;
-      border-radius: 5px;
-      &:hover {
-        cursor: pointer;
-        transition: ease 0.2s;
-        background-color: #2f79ba19;
+    .sidebar-item {
+      padding: 1rem;
+      .sidebar-item-btn {
         color: #003767;
-        box-shadow: 0px 0px 0px 1px #2f79ba6d;
+        background-color: #2f79ba19;
+        padding: 20px 40px;
+        text-align: left;
+        border: none;
+        width: 100%;
+        border-radius: 5px;
+        &:hover {
+          cursor: pointer;
+          transition: ease 0.2s;
+          background-color: #245b8b2d;
+          box-shadow: inset 0px 0px 0px 1px #2f79ba6d;
+        }
       }
     }
+  }
+  .sidebar-bottom {
+    font-size: x-small;
+    padding: 1rem;
+    opacity: 30%;
   }
 }
 
