Style overhaul: Changed colors and logo

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,7 @@
 nav {
+  background-color: #111213;
   padding: 0.1rem;
-  box-shadow: 0px 0px 0px 1px #ccc;
+  box-shadow: 0px 0px 0px 1px #cccccc1f;
   ul {
     padding-left: 1rem;
     padding-right: 0;
