--- a/src/app/sidebar/board-btn/board-btn.component.scss
+++ b/src/app/sidebar/board-btn/board-btn.component.scss
@@ -1,5 +1,6 @@
 .sidebar-item-btn {
-  background-color: #f3f3f3;
+  background-color: #222526;
+  color: whitesmoke;
   padding: 12px 24px;
   text-align: left;
   border: none;
@@ -9,6 +10,6 @@
     cursor: pointer;
     transition: ease 0.2s;
     background-color: #245b8b5d;
-    color: #003767;
+    color: #00eeff;
   }
 }
