--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,4 +4,6 @@ body {
   font-family: 'Poppins', sans-serif;
   overflow: hidden;
   margin: auto;
+  background-color: #161718;
+  color: whitesmoke;
 }
