Created 'board' component; Updated 'board-btn', 'sidebar' and 'app' components to work with 'board' component; For now the 'board' component only displays the name of the selected 'board-btn' from the 'sidebar' inside its template; Adjustments to styling: Added active state for 'board-btn' when clicked; Other small changes for 'header' and 'sidebar' styling.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header />
 <main>
-  <app-sidebar />
+  <app-sidebar (selectedBoard)="board.onBoardSelected($event)"/>
+  <app-board #board></app-board>
 </main>
