--- a/src/app/sidebar/board-btn/board-btn.component.scss
+++ b/src/app/sidebar/board-btn/board-btn.component.scss
@@ -11,5 +11,10 @@
     transition: ease 0.2s;
     background-color: #245b8b5d;
     color: #00eeff;
+    box-shadow: 0px 0px 0px 1px #00eeff;
+  }
+  &.active {
+    background-color: #245b8b5d;
+    color: #00eeff;
   }
 }
