--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,4 +1,5 @@
 .sidebar-hidden {
+  float: left;
   color: whitesmoke;
   font-size: 18px;
   background: none;
@@ -18,6 +19,8 @@
   }
 }
 .sidebar {
+  position: absolute;
+  float: left;
   background-color: #111213;
   margin-top: 1px;
   width: 20%;
@@ -30,7 +33,6 @@
     box-shadow: 0px 0px 0px 0px #cccccc1f;
     padding: 1rem;
     .sidebar-close-btn {
-      
       color: whitesmoke;
       font-size: 18px;
       border-radius: 5px;
@@ -66,5 +68,9 @@
 @media (max-width: 960px) {
   .sidebar {
     width: 60%;
+    .sidebar-content {
+      overflow-y: auto;
+      height: 50vh;
+    }
   }
 }
