--- a/src/app/sidebar/board-btn/board-btn.component.html
+++ b/src/app/sidebar/board-btn/board-btn.component.html
@@ -1,2 +1,7 @@
-<button class="sidebar-item-btn" [class.active]="isActive" (click)="onSelectBoard()">{{ boardBtn.boardName
-    }}</button>
+<button
+  class="sidebar-item-btn"
+  [class.active]="isActive"
+  (click)="onSelectBoard()"
+>
+  {{ boardBtn.boardName }}
+</button>
