--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -4,7 +4,6 @@
   font-size: 18px;
   background: none;
   border: none;
-  margin-top: 1px;
   padding-top: 2.5rem;
   height: 100vh;
   width: 30px;
@@ -22,23 +21,19 @@
   position: absolute;
   float: left;
   background-color: #111213;
-  margin-top: 1px;
   width: 20%;
   height: 100vh;
   box-shadow: 1px 0px 0px 0px #cccccc1f;
-  header {
+  .header {
     position: relative;
     display: flex;
     justify-content: space-between;
-    box-shadow: 0px 0px 0px 0px #cccccc1f;
-    padding: 1rem;
+    box-shadow: 0px 1px 0px 0px #cccccc1f;
+    padding: 0.5rem;
     .sidebar-close-btn {
       color: whitesmoke;
       font-size: 18px;
       border-radius: 5px;
-      padding: 0px 10px;
-      margin-top: 10px;
-      margin-bottom: 10px;
       border: none;
       background: none;
       &:hover {
@@ -51,6 +46,18 @@
         padding-top: 5px;
       }
     }
+    .icon {
+      border-radius: 5px;
+      padding: 10px 10px;
+      background-color: #245b8b5d;
+      color: #00eeff;
+    }
+  }
+  .header-content {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5rem;
   }
   .sidebar-content {
     overflow-y: auto;
