Changed sidebar to stay open by default

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-@if (!isSidebarBtnClicked) {
+@if (isSidebarBtnClicked) {
   <button (click)="onSideBarBtnClick()" class="sidebar-hidden">
     <i class="pi pi-angle-double-right"></i>
   </button>
