Added mock-up buttons(add new board button, action button) in sidebar and board-btn components; A few small tweaks for styling.

--- a/src/app/sidebar/board-btn/board-btn.component.html
+++ b/src/app/sidebar/board-btn/board-btn.component.html
@@ -1,7 +1,4 @@
-<button
-  class="sidebar-item-btn"
-  [class.active]="isActive"
-  (click)="onSelectBoard()"
->
+<button class="sidebar-item-btn" [class.active]="isActive" (click)="onSelectBoard()">
   {{ boardBtn.boardName }}
+  <button class="board-btn-action-btn"><i class="pi pi-ellipsis-h"></i></button>
 </button>
