--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,30 +1,28 @@
 @if (isSidebarBtnClicked) {
-  <button (click)="onSideBarBtnClick()" class="sidebar-hidden">
-    <i class="pi pi-angle-double-right"></i>
-  </button>
+<button (click)="onSideBarBtnClick()" class="sidebar-hidden">
+  <i class="pi pi-angle-double-right"></i>
+</button>
 } @else {
-  <aside class="sidebar">
-    <header class="header">
-      <h3><i class="icon pi pi-list"></i> Task Organizer</h3>
-      <button (click)="onSideBarBtnClick()" class="sidebar-close-btn">
-        <i class="pi pi-angle-double-left"></i>
-      </button>
-    </header>
-    <header class="header-content">
-      <h3>Your boards</h3>
-    </header>
-    <div class="sidebar-content">
-      <ul>
-        @for (index of boards; track index.id) {
-          <li class="sidebar-item">
-            <app-board-btn
-              [isActive]="activeBoardName === index.boardName"
-              [boardBtn]="index"
-              (selectBoard)="onSelectedBoard($event)"
-            />
-          </li>
-        }
-      </ul>
-    </div>
-  </aside>
+<aside class="sidebar">
+  <header class="header">
+    <h3><i class="icon pi pi-list"></i> Task Organizer</h3>
+    <button (click)="onSideBarBtnClick()" class="sidebar-close-btn">
+      <i class="pi pi-angle-double-left"></i>
+    </button>
+  </header>
+  <header class="header-content">
+    <h3>Your boards</h3>
+    <button class="add-board-btn"><i class="pi pi-plus"></i></button>
+  </header>
+  <div class="sidebar-content">
+    <ul>
+      @for (index of boards; track index.id) {
+      <li class="sidebar-item">
+        <app-board-btn [isActive]="activeBoardName === index.boardName" [boardBtn]="index"
+          (selectBoard)="onSelectedBoard($event)" />
+      </li>
+      }
+    </ul>
+  </div>
+</aside>
 }
