First implementation of routing: Defined routes for 'home' and 'board' components in 'app.routes.ts'; Updated 'board-btn' component to use RouterLink to match/set the path and parse data('/board', id,  name) and RouterLinkActive; Updated 'board' component to use ActivatedRoute providing access to information about the route associated with the 'board' component loaded in the outlet and used paramMap observable to get every board name using interpolation to display it in the template; Other changes: styling and folder hierarchy.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <main>
-  <app-sidebar (selectedBoard)="board.onBoardSelected($event)" />
-  <app-board #board></app-board>
+  <app-sidebar />
+  <router-outlet />
 </main>
