--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,9 +1,1 @@
-@if (selectedBoardName) {
-  <header>
-    <h2>{{ selectedBoardName }}</h2>
-  </header>
-} @else {
-  <header>
-    <p>Please select a board from the sidebar.</p>
-  </header>
-}
+<h3>{{ boardName }}</h3>
