--- a/src/app/sidebar/board-btn/board-btn.component.scss
+++ b/src/app/sidebar/board-btn/board-btn.component.scss
@@ -1,4 +1,6 @@
 .sidebar-item-btn {
+  text-decoration: none;
+  font-size: 14px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -7,7 +9,6 @@
   padding: 10px 20px;
   text-align: left;
   border: none;
-  width: 100%;
   border-radius: 5px;
   &:hover {
     cursor: pointer;
@@ -33,7 +34,7 @@
     background: none;
     border: none;
     .pi-ellipsis-h {
-      padding-top: 2px;
+      padding-top: 4px;
     }
     &:hover {
       transition: ease 0.2s;
