Modified boards array to hold a third property(boardUrl) in order to separate url name from the boardName

--- a/src/app/sidebar/board-btn/board-btn.component.html
+++ b/src/app/sidebar/board-btn/board-btn.component.html
@@ -1,4 +1,4 @@
-<a class="sidebar-item-btn" [routerLink]="['/board', boardBtn.id, boardBtn.boardName]" routerLinkActive="active">
+<a class="sidebar-item-btn" [routerLink]="['/board', boardBtn.id, boardBtn.boardUrl]" routerLinkActive="active">
   {{ boardBtn.boardName }}
   <button class="board-btn-action-btn"><i class="pi pi-ellipsis-h"></i></button>
 </a>
