--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
   </header>
   <header class="header-content">
     <h3>Your boards</h3>
-    <button class="add-board-btn" (click)="onAddBoardBtn()"><i class="pi pi-plus"></i></button>
+    <button class="add-board-btn"><i class="pi pi-plus"></i></button>
   </header>
   <div class="sidebar-content">
     <ul>
