Changed styling for 'not-found' component.

--- a/src/app/_pages/not-found/not-found.component.scss
+++ b/src/app/_pages/not-found/not-found.component.scss
@@ -10,6 +10,7 @@
     padding: 10px;
     background-color: #ff000015;
     color: #ff0000b5;
+    box-shadow: 0px 0px 0px 1px #ff0000b5;
   }
   .content {
     display: flex;
