--- a/src/app/sidebar/board-btn/board-btn.component.html
+++ b/src/app/sidebar/board-btn/board-btn.component.html
@@ -1,29 +1,31 @@
 <div class="wrapper">
-  <a class="sidebar-item-btn" [routerLink]="['/board', boardBtn.id, boardBtn.boardUrl]" routerLinkActive="active">
-    {{ boardBtn.boardName }}
-    <button class="board-btn-action-btn" [ngClass]="{'active' : isBoardBtnActionActive}"
-      (click)="onBoardBtnActionClicked(); toggleBoardBtnActionActive()"><i class="pi pi-ellipsis-h"></i></button>
-  </a>
-  @if (isBoardBtnActionClicked) {
-  <div class="action-btns-wrapper">
-    <button class="edit-board" [ngClass]="{'active' : isEditBtnActive}"
-      (click)="onEditBoardBtnClicked(); toggleEditBoardBtnActive()"><i class="pi pi-pen-to-square"></i></button>
-    @if (isEditBoardBtnClicked) {
-    <form class="edit-board-form" #editBoard="ngForm" (ngSubmit)="onSubmitEdit(editBoard)">
-      <div class="edit-board-header">
-        <label for="boardNameInput">Board title</label>
-        <button class="close-edit-board" type="button"
-          (click)="onEditBoardBtnClicked(); toggleEditBoardBtnActive(); editBoard.resetForm()"><i
-            class="pi pi-times"></i></button>
-      </div>
-      <input id="boardNameInput" [(ngModel)]="boardNameInput" name="boardNameInput" type="text" required />
-      <div class="submit-wrapper">
-        <button type="submit" [disabled]="!editBoard.valid"
-          (click)="toggleEditBoardBtnActive(); onEditBoardBtnClicked(); onBoardBtnActionClicked(); toggleBoardBtnActionActive()">Edit</button>
+  @if (isEditBoardBtnClicked) {
+  <div #editBoardWrapper>
+    <form class="edit-board-form" #editBoardForm="ngForm" (ngSubmit)="onSubmitEdit(editBoardForm)">
+      <div class="edit-board-form-content">
+        <input #editBoardInput id="boardNameInput" [(ngModel)]="boardNameInput" name="boardNameInput" type="text" required>
+        <div class="edit-board-form-btns">
+          <button class="confirm-edit-btn" type="submit" [disabled]="!editBoardForm.valid"
+            (click)="toggleButtonState('submitBtn')"><i class="pi pi-check"></i></button>
+          <button class="close-edit-btn" type="button" (click)="toggleButtonState('closeEditBtn')"><i
+              class="pi pi-times"></i></button>
+        </div>
       </div>
     </form>
-    }
+  </div>
+  } @else {
+  <a class="sidebar-item-btn" [ngClass]="{'board-btn-active-action' : isBoardBtnActionClicked}"
+    [routerLink]="['/board', boardBtn.id, boardBtn.boardUrl]" routerLinkActive="active">
+    {{ boardBtn.boardName }}
+    <button class="board-btn-action-btn" (click)="toggleButtonState('actionBtn')"><i
+        class="pi pi-ellipsis-h"></i></button>
+  </a>
+  @if (isBoardBtnActionClicked) {
+  <div class="action-btns-wrapper" #actionWrapper>
+    <button class="edit-board" [ngClass]="{'active' : isEditBoardBtnClicked}" (click)="toggleButtonState('editBtn')"><i
+        class="pi pi-pen-to-square"></i></button>
     <button class="delete-board" (click)="onDeleteBoard()"><i class="pi pi-trash"></i></button>
   </div>
+  }
   }
 </div>
